refactor: update horse and jockey services and controllers

--- a/PegasusFront/src/app/modules/admin/components/horses-display/horses-display.component.html
+++ b/PegasusFront/src/app/modules/admin/components/horses-display/horses-display.component.html
@@ -3,8 +3,9 @@
 <app-table
   tableHeader="Cavalos"
   [tableColumnDefinition]="columns"
-  [values]="horses"
+  [values]="filteredHorses"
   (editEvent)="handleEditHorse($event)"
   (deleteEvent)="handleDeleteHorse($event)"
-  (filterEvent)="filterHorse($event)"
+  (filterEvent)="handleFilterHorses($event)"
+  (addEvent)="handleAddHorse()"
 ></app-table>
