--- a/PegasusFront/src/app/modules/races/components/races-cards/races-cards.component.html
+++ b/PegasusFront/src/app/modules/races/components/races-cards/races-cards.component.html
@@ -1,39 +1,20 @@
+<p-panel
+  class="col-4"
+  header="{{race.raceCourse.name}} | Hora: {{race.time}} | Data: {{race.date | date:'dd/MM/yyyy'}}"
+  [toggleable]="true">
 
-<div class="m-2">
-  <p-panel header="Hora: {{race.time}} Data: {{race.date | date:'dd/MM/yyyy'}}" [toggleable]="true">
-    <ng-container *ngFor="let horseJockey of race.raceHorseJockeys">
-      <p-card class="m-2">
-        <div class="flex justify-content-around">
-          <p>Jockey: {{getJockeyInfo(horseJockey.jockeyId)?.name}}</p>
-          <p>Horse: {{getHorseInfo(horseJockey.horseId)?.name}}</p>
+  <ng-container *ngFor="let horseJockey of race.raceHorseJockeys">
+    <p-card class="m-2">
+      <div class="d-flex justify-content-around flex-column">
+        <div class="d-flex justify-content-between">
+          <p>Horse: {{horseJockey.horse.name}}</p>
+          <p>Jockey: {{horseJockey.jockey.name}}</p>
         </div>
-      </p-card>
-    </ng-container>
-  </p-panel>
-</div>
+        <p>Odds: {{horseJockey.odds.currentOdd}}</p>
+      </div>
+    </p-card>
+  </ng-container>
+
+</p-panel>
 
 
-
-<!--<div>-->
-<!--  <p>{{race.id}}</p>-->
-<!--  <p>{{race.time}}</p>-->
-<!--  <p>{{race.date}}</p>-->
-<!--  <p>RaceCourseId: {{race.raceCourseId}}</p>-->
-<!--  <div *ngFor="let raceHorseJockey of race.raceHorseJockeys">-->
-
-<!--    <ng-container>-->
-<!--      <p>Horse Name: {{ getHorseInfo(raceHorseJockey.horseId)?.name }}</p>-->
-<!--&lt;!&ndash;      <p>Horse Age: {{ horse.age }}</p>&ndash;&gt;-->
-<!--&lt;!&ndash;      <p>Horse sex: {{ horse.sex }}</p>&ndash;&gt;-->
-<!--&lt;!&ndash;      <p>Número de Corridas: {{horse.numberOfRaces}}</p>&ndash;&gt;-->
-<!--    </ng-container>-->
-
-<!--    <ng-container>-->
-<!--      <p>Jockey Name: {{ getJockeyInfo(raceHorseJockey.jockeyId)?.name }}</p>-->
-<!--      &lt;!&ndash;      <p>Horse Age: {{ horse.age }}</p>&ndash;&gt;-->
-<!--      &lt;!&ndash;      <p>Horse sex: {{ horse.sex }}</p>&ndash;&gt;-->
-<!--      &lt;!&ndash;      <p>Número de Corridas: {{horse.numberOfRaces}}</p>&ndash;&gt;-->
-<!--    </ng-container>-->
-
-<!--  </div>-->
-<!--</div>-->
