--- a/PegasusFront/src/app/modules/races/page/races-page/races-page.component.html
+++ b/PegasusFront/src/app/modules/races/page/races-page/races-page.component.html
@@ -1,5 +1,10 @@
 <app-header-menu-bar [menuItems]="menuItems"></app-header-menu-bar>
 
 <div class="row justify-content-center">
-    <app-races-cards class="col-10 col-lg-4 my-2" *ngFor="let race of races" [race]="race"></app-races-cards>
+    <app-race-card
+      class="col-10 col-md-5 col-xxl-3 my-2"
+      *ngFor="let race of races"
+      [race]="race">
+    </app-race-card>
 </div>
+
