feat: add Users and Wallets with authentication

--- a/PegasusFront/src/app/modules/races/page/races-page/races-page.component.html
+++ b/PegasusFront/src/app/modules/races/page/races-page/races-page.component.html
@@ -1,6 +1,6 @@
 <app-header-menu-bar [menuItems]="menuItems"></app-header-menu-bar>
 
-<div class="row justify-content-center">
+<div class="row justify-content-center w-100">
     <app-race-card
       class="col-10 col-md-5 col-xxl-3 my-2"
       *ngFor="let race of races"
