--- a/PegasusFront/src/app/app.component.html
+++ b/PegasusFront/src/app/app.component.html
@@ -7,4 +7,5 @@
   [breakpoints]="{ '920px': { width: '100%', right: '0', left: '0' } }"
 ></p-toast>
 
-<router-outlet></router-outlet>
+<router-outlet>
+</router-outlet>
