--- a/PegasusFront/src/app/modules/shared/components/header-menu-bar/header-menu-bar.component.html
+++ b/PegasusFront/src/app/modules/shared/components/header-menu-bar/header-menu-bar.component.html
@@ -1,1 +1,8 @@
-<p-menubar [model]="menuItems" />
+<p-menubar [model]="menuItems">
+
+  <ng-template pTemplate="end">
+    <p-button (onClick)="handleLogout()">
+      <i class="pi pi-sign-out"></i>
+    </p-button>
+  </ng-template>
+</p-menubar>
