feat: add race form

--- a/PegasusFront/src/app/modules/admin/page/admin-home/admin-home.component.html
+++ b/PegasusFront/src/app/modules/admin/page/admin-home/admin-home.component.html
@@ -1,3 +1,16 @@
-<app-header-menu-bar [menuItems]="menuItems"></app-header-menu-bar>
-<router-outlet></router-outlet>
+<div class="min-vh-100 d-flex flex-column">
+
+  <app-header-menu-bar [menuItems]="menuItems"></app-header-menu-bar>
+
+  <main class="bg-black d-flex align-items-center justify-content-center flex-grow-1">
+    <router-outlet>
+    </router-outlet>
+  </main>
+
+</div>
+
+
+
+
+
 
