--- a/PegasusFront/src/app/modules/admin/components/jockeys-display/jockeys-display.component.html
+++ b/PegasusFront/src/app/modules/admin/components/jockeys-display/jockeys-display.component.html
@@ -1,1 +1,6 @@
-<app-table tableHeader="Jockeys" [tableColumnDefinition]="jockeyColumns" [values]="jockeys"></app-table>
+<app-table
+  tableHeader="Jockeys"
+  [tableColumnDefinition]="jockeyColumns"
+  [values]="jockeys">
+
+</app-table>
