refactor: alter routes, add horse and jockey tables to users module

--- a/PegasusFront/src/app/modules/users/components/races/race-card/race-card.component.html
+++ b/PegasusFront/src/app/modules/users/components/races/race-card/race-card.component.html
@@ -19,7 +19,7 @@
     <p-card class="m-1">
       <div class="row justify-content-around g-0">
         <div class="col-2 d-flex justify-content-center align-items-center">
-          <p class="m-0">{{horseJockey.id}}</p>
+          <p class="m-0">{{horseJockey.number}}</p>
         </div>
         <div class="col-8 d-flex flex-column py-2">
           <p
