--- a/PegasusFront/src/app/modules/admin/components/races/race-form/race-form.component.html
+++ b/PegasusFront/src/app/modules/admin/components/races/race-form/race-form.component.html
@@ -1,4 +1,4 @@
-<section class="races py-5">
+<section class="race-form-container py-5">
   <p-card >
     <ng-template pTemplate="header">
       <div class="image-container"></div>
