feat: add wallet info and wallet transactions

--- a/PegasusFront/src/app/modules/shared/components/wallet/wallet/wallet.component.css
+++ b/PegasusFront/src/app/modules/shared/components/wallet/wallet/wallet.component.css
@@ -7,3 +7,12 @@
   background-repeat: no-repeat;
   filter: grayscale(50%);
 }
+
+:host ::ng-deep .p-button, :host ::ng-deep .p-inputnumber {
+  min-width: 300px;
+  text-align: center;
+}
+
+:host ::ng-deep .p-inputtext {
+  text-align: center;
+}
