--- a/PegasusFront/src/app/modules/shared/components/header-menu-bar/header-menu-bar.component.html
+++ b/PegasusFront/src/app/modules/shared/components/header-menu-bar/header-menu-bar.component.html
@@ -2,7 +2,10 @@
 
   <ng-template pTemplate="end">
     <div class="d-flex">
-      <div class="mx-3 wallet-btn">
+      <div class="mx-3 d-flex align-items-center text-success">
+        {{userMoney | currency}}
+      </div>
+      <div class="mx-3">
         <p-button (onClick)="handleWalletClick()" icon="fa-solid fa-sack-dollar" styleClass="p-button-outlined p-button-success">
         </p-button>
       </div>
