--- a/PegasusFront/src/app/modules/shared/components/wallet/wallet/wallet.component.html
+++ b/PegasusFront/src/app/modules/shared/components/wallet/wallet/wallet.component.html
@@ -6,8 +6,39 @@
     </ng-template>
 
     <ng-template pTemplate="body">
-      <p >Valor disponível: {{wallet?.amount ? wallet!.amount : "Não foi possível obter este dado."}}</p>
-      <p-button>Adicionar</p-button>
+      <div class="d-flex justify-content-center flex-column">
+        <p-card class="m-2">
+          <p class="text-center m-0 fw-bold">Valor disponível: {{userMoney | currency: "BRL"}}</p>
+        </p-card>
+
+        <p-card class="m-2 text-center">
+          <p class="m-0 fw-bold">Realizar transação</p>
+          <p-inputNumber
+            [(ngModel)]="amountInput"
+            class="text-center"
+            inputId="currency-us"
+            mode="currency"
+            currency="BRL"
+            locale="pt-BR">
+          </p-inputNumber>
+          <div class="text-center my-2">
+            <p-button
+              class="mx-2"
+              styleClass="p-button-outlined p-button-success"
+              (onClick)="handleNewTransaction('DEPOSIT')">
+              Adicionar
+            </p-button>
+
+            <p-button
+              class="mx-2"
+              styleClass="p-button-outlined p-button-danger"
+              (onClick)="handleNewTransaction('WITHDRAWAL')">
+              Retirar
+            </p-button>
+          </div>
+        </p-card>
+      </div>
+
     </ng-template>
 
 
