feat: add create bet on frontend

--- a/PegasusFront/src/app/modules/users/components/sidebar-content/sidebar-content.component.html
+++ b/PegasusFront/src/app/modules/users/components/sidebar-content/sidebar-content.component.html
@@ -6,4 +6,25 @@
     <p>Odds: {{horseJockey.odds.currentOdd}}</p>
   </p-card>
 
+  <p-card class="m-2 text-center">
+  <p class="m-0 fw-bold">Realizar transação</p>
+  <p-inputNumber
+    [(ngModel)]="amountInput"
+    class="text-center"
+    inputId="currency-us"
+    mode="currency"
+    currency="BRL"
+    locale="pt-BR">
+  </p-inputNumber>
+  <div class="text-center my-2">
+    <p-button
+      class="mx-2"
+      styleClass="p-button-outlined p-button-success"
+      (onClick)="createBet()">
+      Adicionar
+    </p-button>
+
+  </div>
+  </p-card>
+
 </div>
