feat: add bets component

--- a/PegasusFront/src/app/modules/admin/components/races/racecourse-form/racecourse-form.component.html
+++ b/PegasusFront/src/app/modules/admin/components/races/racecourse-form/racecourse-form.component.html
@@ -2,7 +2,7 @@
   <p-card>
     <ng-template pTemplate="header">
       <div class="image-container"></div>
-      <h1 class="text-center mt-3">Criar Corrida</h1>
+      <h1 class="text-center mt-3">Criar Circuito</h1>
     </ng-template>
 
     <ng-template pTemplate="body">
@@ -20,7 +20,7 @@
               [disabled]="createRacecourseForm.invalid"
               pButton
               pRipple
-              label="Criar Corrida"
+              label="Criar Circuito"
               class="p-button"></button>
           </div>
         </form>
