--- a/PegasusFront/src/app/modules/users/components/jockeys/jockeys-table.component.html
+++ b/PegasusFront/src/app/modules/users/components/jockeys/jockeys-table.component.html
@@ -11,6 +11,7 @@
       tableHeader="Jockeys"
       [tableColumnDefinition]="jockeyColumns"
       (filterEvent)="handleFilterJockeys($event)"
+      (rowClickEvent)="showJockeyInfo($event)"
       [values]="filteredJockeys">
     </app-table>
   </p-card>
