--- a/PegasusFront/src/app/modules/shared/components/race-card/race-card.component.html
+++ b/PegasusFront/src/app/modules/shared/components/race-card/race-card.component.html
@@ -1,5 +1,5 @@
 <p-sidebar [(visible)]="sideBarVisible" position="right">
-  <app-sidebar-content [horseJockey]="selectedHorseJockey"></app-sidebar-content>
+  <app-place-bet-sidebar [horseJockey]="selectedHorseJockey" [participants]="race.raceHorseJockeys.length"></app-place-bet-sidebar>
 </p-sidebar>
 
 <p-panel
