--- a/PegasusFront/src/app/modules/users/components/place-bet-sidebar/place-bet-sidebar.component.html
+++ b/PegasusFront/src/app/modules/users/components/place-bet-sidebar/place-bet-sidebar.component.html
@@ -35,7 +35,7 @@
         class="m-2"
         styleClass="p-button-outlined p-button-success"
         (onClick)="createBet()">
-        Oracular
+        <i class="fa-solid fa-hat-wizard me-2"></i>Apostar
       </p-button>
     </ng-template>
   </p-card>
