--- a/PegasusFront/src/app/modules/admin/page/admin-home/admin-home.component.html
+++ b/PegasusFront/src/app/modules/admin/page/admin-home/admin-home.component.html
@@ -2,7 +2,7 @@
 
   <app-header-menu-bar [menuItems]="menuItems"></app-header-menu-bar>
 
-  <main class="bg-black d-flex align-items-center justify-content-center flex-grow-1">
+  <main style="{min-width: 100vw}" class="bg-black d-flex align-items-center justify-content-center flex-grow-1">
     <router-outlet>
     </router-outlet>
   </main>
