--- a/PegasusFront/src/app/modules/shared/components/race-card/race-card.component.html
+++ b/PegasusFront/src/app/modules/shared/components/race-card/race-card.component.html
@@ -1,17 +1,21 @@
 <p-sidebar [(visible)]="sideBarVisible" position="right">
-  <app-place-bet-sidebar [horseJockey]="selectedHorseJockey" [participants]="race.raceHorseJockeys.length"></app-place-bet-sidebar>
+  <app-place-bet-sidebar (betCreated)="this.betCreated.emit('bet created')" [horseJockey]="selectedHorseJockey" [participants]="race.raceHorseJockeys.length"></app-place-bet-sidebar>
 </p-sidebar>
 
 <p-panel
   [toggleable]="true">
-
   <ng-template pTemplate="header">
-    <div class="d-flex flex-grow-1 justify-content-between me-3">
-      <p class="m-0">{{race.date | date:'dd/MM/yyyy'}}</p>
-      <p class="text-primary font-semibold text-xl m-0">
-        {{race.raceCourse.name}}
-      </p>
-      <p class="m-0">{{race.time}}</p>
+    <div class="d-flex flex-column w-100">
+      <div class="d-flex flex-grow-1 justify-content-between me-3">
+        <p class="m-0">{{race.date | date:'dd/MM'}}</p>
+        <p class="text-primary font-semibold text-xl m-0">
+          {{race.raceCourse.name}}
+        </p>
+        <p class="m-0">{{race.time}}</p>
+      </div>
+      <div class="text-center mt-2">
+        <p>Status: {{race.finished ? 'Concluída' : 'Aceitando Apostas'}}</p>
+      </div>
     </div>
   </ng-template>
 
@@ -19,16 +23,36 @@
     <p-card class="m-1">
       <div class="row justify-content-around g-0">
         <div class="col-2 d-flex justify-content-center align-items-center">
-          <p class="m-0">{{horseJockey.number}}</p>
+          <p class="m-0" pTooltip="Número" tooltipPosition="left">{{horseJockey.number}}</p>
         </div>
         <div class="col-8 d-flex flex-column py-2">
           <app-horse-jockey-info
             [horse]="horseJockey.horse"
             [jockey]="horseJockey.jockey"
           ></app-horse-jockey-info>
+          <div>
+          <ng-container *ngIf="findBetByRaceHorseJockey(horseJockey.id); let bets">
+            <div *ngFor="let bet of bets" class="mt-2">
+              <i class="fa-solid fa-hat-wizard" pTooltip="Aposta"></i> {{bet.amount | currency}} |
+              tipo: {{bet.betType}}
+              {{bet.status != 'WAITING' ? "| status: " + bet.status : ''}}</div>
+          </ng-container>
         </div>
-        <div (click)="toggleSideBar(horseJockey)" class="odds-container col-2 d-flex align-items-center justify-content-center border border-1 border-black rounded">
+
+        </div>
+        <div
+          *ngIf="!race.finished"
+          (click)="toggleSideBar(horseJockey)"
+          pTooltip="Odds"
+          class="odds-container col-2 d-flex align-items-center justify-content-center border border-1 border-black rounded">
           <p class="m-0">{{horseJockey.odds.currentOdd}}</p>
+        </div>
+        <div *ngIf="race.finished" class="col-2 d-flex flex-column align-items-center justify-content-center rounded">
+          <i class="fa-solid fa-ranking-star mb-1" pTooltip="Posição final"></i>
+          <p class="text-center m-0">{{horseJockey.position}}</p>
+        </div>
+        <div>
+
         </div>
       </div>
     </p-card>
