--- a/PegasusFront/src/app/modules/users/components/races/live/live/live.component.html
+++ b/PegasusFront/src/app/modules/users/components/races/live/live/live.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="currentRace" class="m-3">
-  <p-card>
+  <p-card *ngIf="!this.raceUpdates.finished">
     <ng-container *ngIf="currentRace">
       <p class="text-center">{{currentRace.raceCourse.name}}</p>
       <div *ngFor="let positions of raceUpdates.positions">
@@ -18,6 +18,13 @@
       </div>
     </ng-container>
   </p-card>
+
+  <ng-container *ngIf="this.raceUpdates.finished">
+    <app-race-finished
+      [race]="this.currentRace"
+      [raceFinalPositions]="raceUpdates"
+    ></app-race-finished>
+  </ng-container>
 </div>
 
 <div class="m-3 text-center" *ngIf="!currentRace">
