feat: add notification badge

--- a/PegasusFront/src/app/modules/shared/components/header-menu-bar/header-menu-bar.component.html
+++ b/PegasusFront/src/app/modules/shared/components/header-menu-bar/header-menu-bar.component.html
@@ -5,6 +5,7 @@
       <div class="mx-3 d-flex align-items-center text-success">
         {{userMoney | currency}}
       </div>
+      <app-notification></app-notification>
       <div class="mx-3">
         <p-button (onClick)="handleWalletClick()" icon="fa-solid fa-sack-dollar" styleClass="p-button-outlined p-button-success">
         </p-button>
