feat: add notification service, update notification on race finish

--- a/PegasusFront/src/app/modules/users/components/races/live/live/live.component.html
+++ b/PegasusFront/src/app/modules/users/components/races/live/live/live.component.html
@@ -12,7 +12,7 @@
         </div>
         <p-progressBar
           [showValue]="false"
-          [style]="{color: positions.raceHorseJockeyId }"
+          [color]="getColor(positions.raceHorseJockeyId.toString().substring(0,2))"
           [value]="positions.position"
         ></p-progressBar>
       </div>
