--- a/PegasusFront/src/app/modules/users/components/races/live/live/live.component.html
+++ b/PegasusFront/src/app/modules/users/components/races/live/live/live.component.html
@@ -13,7 +13,7 @@
         <p-progressBar
           [showValue]="false"
           [color]="getColor(positions.raceHorseJockeyId.toString().substring(0,2))"
-          [value]="positions.position"
+          [value]="positions.position * 2"
         ></p-progressBar>
       </div>
     </ng-container>
